scx_simple: add toy workload

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [ "rust/arenalib/arenalib",
     "tools/scxtop",
     "tools/vmlinux_docify",
     "tools/xtask",
+    "tools/workloads",
 ]
 resolver = "2"
 
